--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <title>Tube Status</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/assets/styles/main.css">
 
 </head>
 
